--- a/about.html
+++ b/about.html
@@ -13,39 +13,48 @@
     <title>About</title>
     <link rel="stylesheet" href="css/html5reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/book" href="images/book.ico">
 
 </head>
 <body>
     <div class="skip"><a href="#main">Skip to Main Content</a></div>
-    <header>
-        <nav>
-            <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="ux-goodreads.html">Podcasts & Good Reads</a></li>
-                <li><a href="principles.html">My Design Principles</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="about.html" class="active-link">About</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main id="main">
-        <h1>About the Creator</h1>
-        <p>Cynthia Augustine is a multidisciplinary designer from Cape Town, South Africa. She loves creating meaningful digital experiences that are accessible, seamless and user-centric.</p>
-        <h2>How did I get into Product Design?</h2>
-        <p>
-            In 2019, I entered a South African government-run competition that challenged the youth to design a mobile application that would connect lower-income citizens to government housing information. Securing third place for my simple design was only partially fulfilling, as the true reward was designing for the betterment of people’s lives. This experience drew me in a new direction; one that allowed me to use my creative abilities to design a digital product for a social purpose. Ever since this experience, I have seized every opportunity to grow as a designer and hone in my design skills.
-        </p>
-        <figure>
-            <img src="images/cynthia-augustine.jpeg" style="width:50%" alt="A black and white picture of the creator of the website." >
-            <figcaption>Image of Cynthia Augustine.</figcaption>
-        </figure>
-        <figure>
-            <img src="images/picture-of-me.jpg" style="width:50%" alt="A colour photo of girl at a football stadium" >
-            <figcaption>A picture of myself at the Big House.</figcaption>
-        </figure>
-    </main>
-    <footer>
-        <p> &copy; Created by Cynthia Augustine 2022</p>
-    </footer>
+    <div class="container">
+        <header>
+            <nav>
+                <ul class="nav-links">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="ux-goodreads.html">Resources</a></li>
+                    <li><a href="principles.html">Design Principles</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="about.html" class="active-link">About</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main id="main">
+            <div class="main-header">
+                <h1>About the Creator</h1>
+                <p>Cynthia Augustine is a multidisciplinary designer from Cape Town, South Africa. She loves creating meaningful digital experiences that are accessible, seamless and user-centric.</p>
+                <figure>
+                    <img src="images/cynthia-augustine.jpeg" style="width:50%" alt="A black and white picture of the creator of the website.">
+                    <figcaption>Image of Cynthia Augustine.</figcaption>
+                </figure>
+            </div>
+            <div class="how-content">
+                <h2>How did I get into Product Design?</h2>
+                <p>
+                    In 2019, I entered a South African government-run competition that challenged the youth to design a mobile application that would connect lower-income citizens to government housing information. Securing third place for my simple design was only partially fulfilling, as the true reward was designing for the betterment of people’s lives. This experience drew me in a new direction; one that allowed me to use my creative abilities to design a digital product for a social purpose. Ever since this experience, I have seized every opportunity to grow as a designer and hone in my design skills.
+                </p>
+            </div>
+            <div class="big-house">
+                <figure >
+                    <img src="images/picture-of-me.jpg" style="width:50%" alt="A colour photo of girl at a football stadium">
+                    <figcaption>A picture of myself at the Big House.</figcaption>
+                </figure>
+            </div>
+        </main>
+        <footer>
+            <p> &copy; Created by Cynthia Augustine 2022</p>
+        </footer>
+    </div>
 </body>
 </html>
