--- a/gallery.html
+++ b/gallery.html
@@ -6,93 +6,96 @@
     <script>window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
-
         gtag('config', 'G-H8Z2N4SQDS');</script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gallery</title>
     <link rel="stylesheet" href="css/html5reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/book" href="images/book.ico">
 
 </head>
-
 <body>
     <div class="skip flex-container"><a href="#main">Skip to Main Content</a></div>
-        <nav>
-            <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="ux-goodreads.html">Podcasts & Good Reads</a></li>
-                <li><a href="principles.html">My Design Principles</a></li>
-                <li><a href="gallery.html" class="active-link">Gallery</a></li>
-                <li><a href="about.html">About</a></li>
-            </ul>
-        </nav>
-    <main id="main">
+    <div class="container">
         <header>
-            <h1>My Gallery</h1>
-            <p>
-                This gallery provides a glimpse into my experience at the Univeristy of Michigan's MSI program in UX Design and Research.
-            </p>
+            <nav>
+                <ul class="nav-links">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="ux-goodreads.html">Resources</a></li>
+                    <li><a href="principles.html">Design Principles</a></li>
+                    <li><a href="gallery.html" class="active-link">Gallery</a></li>
+                    <li><a href="about.html">About</a></li>
+                </ul>
+            </nav>
         </header>
-        <div class="gallery">
-            <div class="gallery-item">
-                <figure>
-                    <img src="images/contextual-inquiry-class.jpg" alt="A black and white picture of a lecture room.">
-                    <figcaption>Picture taken in the Contextual Inquiry and Consulting Foundations class</figcaption>
-                </figure>
+        <main id="main">
+            <div class="main-header">
+                <h1>My Gallery</h1>
+                <p>
+                    This gallery provides a glimpse into my experience at the Univeristy of Michigan's MSI program in UX Design and Research.
+                </p>
             </div>
-            <div class="gallery-item">
-                <figure>
-                    <img src="images/zip-crit.jpg"  alt="A black and white picture of a student presenting in a lecture room.">
-                    <figcaption>Picture taken during a Zip Crit presentation in the Intro to Interaction Design class.</figcaption>
-                </figure>
+            <div class="gallery">
+                <div class="gallery-item">
+                    <figure>
+                        <img src="images/contextual-inquiry-class.jpg" alt="A black and white picture of a lecture room.">
+                        <figcaption>Picture taken in the Contextual Inquiry and Consulting Foundations class</figcaption>
+                    </figure>
+                </div>
+                <div class="gallery-item">
+                    <figure>
+                        <img src="images/zip-crit.jpg" alt="A black and white picture of a student presenting in a lecture room.">
+                        <figcaption>Picture taken during a Zip Crit presentation in the Intro to Interaction Design class.</figcaption>
+                    </figure>
+                </div>
+                <div class="gallery-item">
+                    <figure>
+                        <img src="images/lecture.jpeg" alt="A black and white picture of a lecture room with a lecturer.">
+                        <figcaption>Picture taken during the first lecture of the semester.</figcaption>
+                    </figure>
+                </div>
+                <div class="gallery-item">
+                    <figure>
+                        <img src="images/group-work.jpg" alt="A black and white picture of three people on a table talking.">
+                        <figcaption>Picture taken of team members for Contexual Inquiry class.</figcaption>
+                    </figure>
+                </div>
+                <div class="gallery-item">
+                    <figure>
+                        <img src="images/team-picture.jpg" style="width:100%" alt="A black and white picture of four people taking a selfie.">
+                        <figcaption>Picture taken of team members during observation exercise.</figcaption>
+                    </figure>
+                </div>
+                <div class="gallery-item">
+                    <figure>
+                        <img src="images/team-work.jpg" alt="A black and white picture of a piece of paper with a table and mindmap.">
+                        <figcaption>Picture taken of work done by team for Intro to Interaction Design class</figcaption>
+                    </figure>
+                </div>
+                <div class="gallery-item">
+                    <figure>
+                        <img src="images/illustration.png" style="width:100%" alt="A picture of line illustrations">
+                        <figcaption>Image of hand illustrations that I did for an observation task.</figcaption>
+                    </figure>
+                </div>
+                <div class="gallery-item">
+                    <figure>
+                        <img src="images/school-of-information.jpeg" style="width:100%" alt="A black and white picture of a tall building in Ann Arbor.">
+                        <figcaption>Picture taken of UofM School of Information.</figcaption>
+                    </figure>
+                </div>
+                <div class="gallery-item">
+                    <figure>
+                        <img src="images/university-of-michigan.jpeg" style="width:80%" alt="A black and white picture of a university campus.">
+                        <figcaption>School taken of University of Michigan's campus.</figcaption>
+                    </figure>
+                </div>
             </div>
-            <div class="gallery-item">
-                <figure>
-                    <img src="images/lecture.jpeg" alt="A black and white picture of a lecture room with a lecturer.">
-                    <figcaption>Picture taken during the first lecture of the semester.</figcaption>
-                </figure>
-            </div>
-            <div class="gallery-item">
-                <figure>
-                    <img src="images/group-work.jpg" alt="A black and white picture of three people on a table talking.">
-                    <figcaption>Picture taken of team members for Contexual Inquiry class.</figcaption>
-                </figure>
-            </div>
-            <div class="gallery-item">
-                <figure>
-                    <img src="images/team-picture.jpg" alt="A black and white picture of four people taking a selfie.">
-                    <figcaption>Picture taken of team members during observation exercise.</figcaption>
-                </figure>
-            </div>
-            <div class="gallery-item">
-                <figure>
-                    <img src="images/team-work.jpg" alt="A black and white picture of a piece of paper with a table and mindmap.">
-                    <figcaption>Picture taken of work done by team for Intro to Interaction Design class</figcaption>
-                </figure>
-            </div>
-            <div class="gallery-item">
-                <figure>
-                    <img src="images/illustration.png" style="width:80%" alt="A picture of line illustrations">
-                    <figcaption>Image of hand illustrations that I did for an observation task.</figcaption>
-                </figure>
-            </div>
-            <div class="gallery-item">
-                <figure>
-                    <img src="images/school-of-information.jpeg" style="width:80%" alt="A black and white picture of a tall building in Ann Arbor.">
-                    <figcaption>Picture taken of UofM School of Information.</figcaption>
-                </figure>
-            </div>
-            <div class="gallery-item">
-                <figure>
-                    <img src="images/university-of-michigan.jpeg" style="width:80%" alt="A black and white picture of a university campus.">
-                    <figcaption>School taken of University of Michigan's campus.</figcaption>
-                </figure>
-            </div>
-        </div>
-    </main>
-    <footer>
-        <p> &copy; Created by Cynthia Augustine 2022</p>
-    </footer>
+        </main>
+        <footer>
+            <p> &copy; Created by Cynthia Augustine 2022</p>
+        </footer>
+    </div>
 </body>
 </html>
