--- a/principles.html
+++ b/principles.html
@@ -13,46 +13,50 @@
     <title>My Design Principles</title>
     <link rel="stylesheet" href="css/html5reset.css">
     <link rel="stylesheet" href="css/style.css">
-
+    <link rel="icon" type="image/book" href="images/book.ico">
 </head>
 <body>
     <div class="skip"><a href="#main">Skip to Main Content</a></div>
-    <header>
-        <nav>
-            <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="ux-goodreads.html">Podcasts & Good Reads</a></li>
-                <li><a href="principles.html" class="active-link">My Design Principles</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="about.html">About</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main id="main">
-        <h1>My Design Principles</h1>
-        <p>On this page you'll find a list of design principles that I follow.</p>
-        <p>I've curated this to provide guidance for designing ethically humane digital products through patterns focused on user-centred design.</p>
-        <figure>
-            <img src="images/ux.jpeg" style="width:40%" alt="Image of the word UX spelled out using black and white illustrations." >
-            <figcaption>Picture of the word UX composed of illustrations.</figcaption>
-        </figure>
-        <div class="principles">
-            <div class="principle-content">
-                <h2>1. Design with Empathy</h2>
-                <p>In User Experience, the user's needs, goals and experiences should take precedence throughout the design process. Having empathy in design means understanding users: not just their needs, but also their constraints and the context of their situation as a whole.</p>
+    <div class="container">
+        <header>
+            <nav>
+                <ul class="nav-links">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="ux-goodreads.html">Resources</a></li>
+                    <li><a href="principles.html" class="active-link">Design Principles</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="about.html">About</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main id="main">
+            <div class="main-header">
+                <h1>My Design Principles</h1>
+                <p>On this page you'll find a list of design principles that I follow.</p>
+                <p>I've curated this to provide guidance for designing ethically humane digital products through patterns focused on user-centred design.</p>
             </div>
-            <div class="principle-content">
-                <h2>2. Keep it Simple</h2>
-                <p>Time and time again I've learned that simple designs win over the complex ones. Our goal as designers is to help users achieve their goals in the most straightforward possible way. Therefore, I believe that it's important to always design for the 'path of least resistance'. Less is more!</p>
+            <figure class="ux-image">
+                <img src="images/ux.jpeg" style="width:50%" alt="Image of the word UX spelled out using black and white illustrations.">
+                <figcaption>Picture of the word UX composed of illustrations.</figcaption>
+            </figure>
+            <div class="principles">
+                <div class="principle-content">
+                    <h2>1. Design with Empathy</h2>
+                    <p>In User Experience, the user's needs, goals and experiences should take precedence throughout the design process. Having empathy in design means understanding users: not just their needs, but also their constraints and the context of their situation as a whole.</p>
+                </div>
+                <div class="principle-content">
+                    <h2>2. Keep it Simple</h2>
+                    <p>Time and time again I've learned that simple designs win over the complex ones. Our goal as designers is to help users achieve their goals in the most straightforward possible way. Therefore, I believe that it's important to always design for the 'path of least resistance'. Less is more!</p>
+                </div>
+                <div class="principle-content">
+                    <h2>3. Make Mistakes Earlier in the Process</h2>
+                    <p>The quicker your learn from your design mistakes, the quicker you can start identifying areas of improvement. That's where user testing comes into play. Don't underestimat the power of testinig.  </p>
+                </div>
             </div>
-            <div class="principle-content">
-                <h2>3. Make Mistakes Earlier in the Process</h2>
-                <p>The quicker your learn from your design mistakes, the quicker you can start identifying areas of improvement. That's where user testing comes into play. Don't underestimat the power of testinig.  </p>
-            </div>
-        </div>
-    </main>
-    <footer>
-        <p> &copy; Created by Cynthia Augustine 2022</p>
-    </footer>
+        </main>
+        <footer>
+            <p> &copy; Created by Cynthia Augustine 2022</p>
+        </footer>
+    </div>
 </body>
 </html>
